[gd_scene load_steps=21 format=3 uid="uid://b2hbvmuxheibk"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_0c27l"]
[ext_resource type="Script" path="res://scenes/Money.gd" id="2_0eyvk"]
[ext_resource type="PackedScene" uid="uid://bk6i4mmqvmj81" path="res://scenes/soldier.tscn" id="2_itqq6"]
[ext_resource type="PackedScene" uid="uid://jey5lyhfr3dh" path="res://scenes/wave_emitter.tscn" id="3_lj5df"]
[ext_resource type="Script" path="res://scenes/Inventory.gd" id="3_tojuw"]
[ext_resource type="Texture2D" uid="uid://cdrqh315asdvd" path="res://assets/background.png" id="4_0qpd2"]
[ext_resource type="PackedScene" uid="uid://tghdn3hgwgxi" path="res://scenes/tower.tscn" id="4_7ieag"]
[ext_resource type="Script" path="res://scenes/UI.gd" id="5_knj7d"]
[ext_resource type="Texture2D" uid="uid://b43mfv5ulh7i1" path="res://assets/ground.png" id="5_ugk4c"]
[ext_resource type="PackedScene" uid="uid://bj2jwsffkrpm7" path="res://scenes/guns/simple_gun.tscn" id="6_mkp5x"]
[ext_resource type="Script" path="res://scenes/gun-shop.gd" id="8_u15ox"]
[ext_resource type="Texture2D" uid="uid://foyybv82obwi" path="res://assets/guns.png" id="9_f3f1a"]
[ext_resource type="Script" path="res://scenes/BuyButton.gd" id="11_spcmf"]
[ext_resource type="Script" path="res://scenes/gun-workshop.gd" id="13_7yvh6"]
[ext_resource type="PackedScene" uid="uid://cm2m8w1ua6mjt" path="res://scenes/guns/grenade_launcher.tscn" id="13_lj67y"]
[ext_resource type="AudioStream" uid="uid://dlrf8t7eyjkqj" path="res://assets/SFX and BGM/Menu/openGunMenu.wav" id="15_int75"]
[ext_resource type="AudioStream" uid="uid://bqogdxgn1h504" path="res://assets/SFX and BGM/Menu/Futurisitc UI Sound 19.ogg" id="16_a0k4j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtovp"]
size = Vector2(1160, 98)

[sub_resource type="AtlasTexture" id="AtlasTexture_5esxu"]
atlas = ExtResource("9_f3f1a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p58v3"]
atlas = ExtResource("9_f3f1a")
region = Rect2(0, 32, 32, 32)

[node name="Game" type="Node2D"]
texture_filter = 1
script = ExtResource("1_0c27l")

[node name="Money" type="Node" parent="."]
script = ExtResource("2_0eyvk")

[node name="Inventory" type="Node" parent="."]
script = ExtResource("3_tojuw")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("4_0qpd2")
centered = false

[node name="Ground" type="Area2D" parent="."]
position = Vector2(0, 582)
collision_layer = 4
collision_mask = 0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Ground2" type="Sprite2D" parent="Ground"]
position = Vector2(576, 29)
texture = ExtResource("5_ugk4c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
visible = false
position = Vector2(580, 49)
shape = SubResource("RectangleShape2D_dtovp")

[node name="Tower" parent="." instance=ExtResource("4_7ieag")]
position = Vector2(1024, 570)

[node name="WaveEmitter" parent="." instance=ExtResource("3_lj5df")]
position = Vector2(-85, 566)
enemy_prefab = ExtResource("2_itqq6")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_knj7d")

[node name="HP" type="Label" parent="UI"]
offset_left = 24.0
offset_right = 296.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 48
text = "HP: 100/100
"

[node name="Resource" type="Label" parent="UI"]
offset_left = 328.0
offset_right = 537.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 48
text = "Money: 5"

[node name="GunShop" type="Panel" parent="UI"]
visible = false
offset_left = 54.0
offset_top = 105.0
offset_right = 866.0
offset_bottom = 506.0
script = ExtResource("8_u15ox")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GunShop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GunShop/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/GunShop/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="UI/GunShop/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 36
text = "Buy a gun"

[node name="CloseButton" type="Button" parent="UI/GunShop/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 39
text = "x"

[node name="MarginContainer2" type="MarginContainer" parent="UI/GunShop/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="UI/GunShop/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 32
columns = 2

[node name="BulletGun" type="VBoxContainer" parent="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer/BulletGun"]
layout_mode = 2
text = "Bullet Gun"

[node name="TextureRect" type="TextureRect" parent="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer/BulletGun"]
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_5esxu")

[node name="Button" type="Button" parent="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer/BulletGun"]
layout_mode = 2
text = "Buy $5"
script = ExtResource("11_spcmf")
price = 5
prefab = ExtResource("6_mkp5x")

[node name="GrenadeLauncher" type="VBoxContainer" parent="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer/GrenadeLauncher"]
layout_mode = 2
text = "Grenade Launcher"

[node name="TextureRect" type="TextureRect" parent="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer/GrenadeLauncher"]
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_p58v3")

[node name="Button" type="Button" parent="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer/GrenadeLauncher"]
layout_mode = 2
text = "Buy $15"
script = ExtResource("11_spcmf")
price = 15
prefab = ExtResource("13_lj67y")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UI/GunShop"]
stream = ExtResource("15_int75")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="UI/GunShop"]
stream = ExtResource("16_a0k4j")

[node name="GunWorkshop" type="Panel" parent="UI"]
visible = false
offset_left = 54.0
offset_top = 105.0
offset_right = 866.0
offset_bottom = 506.0
script = ExtResource("13_7yvh6")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GunWorkshop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GunWorkshop/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/GunWorkshop/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="UI/GunWorkshop/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 36
text = "Manage the gun"

[node name="CloseButton" type="Button" parent="UI/GunWorkshop/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 39
text = "x"

[node name="MarginContainer2" type="MarginContainer" parent="UI/GunWorkshop/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="UI/GunWorkshop/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GunWorkshop/VBoxContainer/MarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="UI/GunWorkshop/VBoxContainer/MarginContainer2/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Remove Gun"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
autoplay = true

[connection signal="amount_updated" from="Money" to="UI" method="_on_money_amount_updated"]
[connection signal="die" from="Tower" to="." method="_on_tower_die"]
[connection signal="hp_updated" from="Tower" to="UI" method="_on_tower_hp_updated"]
[connection signal="pressed" from="UI/GunShop/VBoxContainer/HBoxContainer/CloseButton" to="UI/GunShop" method="_on_close_button_pressed"]
[connection signal="buy" from="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer/BulletGun/Button" to="UI/GunShop" method="_on_button_buy"]
[connection signal="pressed" from="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer/BulletGun/Button" to="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer/BulletGun/Button" method="_on_pressed"]
[connection signal="buy" from="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer/GrenadeLauncher/Button" to="UI/GunShop" method="_on_button_buy"]
[connection signal="pressed" from="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer/GrenadeLauncher/Button" to="UI/GunShop/VBoxContainer/MarginContainer2/GridContainer/GrenadeLauncher/Button" method="_on_pressed"]
[connection signal="pressed" from="UI/GunWorkshop/VBoxContainer/HBoxContainer/CloseButton" to="UI/GunWorkshop" method="_on_close_button_pressed"]
[connection signal="pressed" from="UI/GunWorkshop/VBoxContainer/MarginContainer2/GridContainer/VBoxContainer/Button" to="UI/GunWorkshop" method="_on_button_pressed"]
